--- a/styles.css
+++ b/styles.css
@@ -140,93 +140,195 @@ input:focus{
 }
 
 
-/* For Desktop View */
-@media screen and (min-width: 1024px) {
-}
 
-/* For Tablet View */
-@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-    .container {
-        width: 400px;
-        height: 400px;
-    }
-    input{
-        width: 200px;
-        height: 200px;
-    }
-}
+
 
 /* For Mobile Portrait View */
 @media screen and (max-device-width: 480px) and (orientation: portrait) {
-    .container {
-        width: 200px;
-        height: 200px;
-    }
-
-    input{
-        width: 200px;
-        height: 200px;
-    }
+    body {
+            background: url(bg-intro-mobile.png), hsl(0, 100%, 74%);
+        }
+    
+        main {
+            flex-direction: column;
+        }
+    
+        .second {
+            margin: 5px 10px 50px 10px;
+        }
+    
+        .form {
+            padding: 20px;
+        }
+    
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        select {
+            padding: 20px;
+        }
+    
+        h1 {
+            font-size: 30px;
+        }
 
     
 }
-/* For Desktop View */
-@media screen and (min-width: 1024px) {
-    .container{
-        width: px;
-    }
-}
 
 /* For Tablet View */
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-    .container {
-        width: 400px;
-        height: 400px;
-    }
+    .second {
+            margin: 5px 20px 50px 20px;
+        }
 }
 
-/* For Mobile Portrait View */
-@media screen and (max-device-width: 480px) and (orientation: portrait) {
-    .container {
-        width: 200px;
-        height: 200px;
-    }
-}
+
 
 /* For Mobile Landscape View */
 @media screen and (max-device-width: 640px) and (orientation: landscape) {
-    .container {
-        width: 400px;
-        height: 200px;
-    }
+    body {
+            background: url(bg-intro-mobile.png), hsl(0, 100%, 74%);
+        }
+    
+        main {
+            flex-direction: column;
+        }
+    
+        .second {
+            margin: 5px 10px 50px 10px;
+        }
+    
+        .form {
+            padding: 20px;
+        }
+    
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        select {
+            padding: 20px;
+        }
+    
+        h1 {
+            font-size: 30px;
+        }
 }
 
-/* For Mobile Phones Portrait or Landscape View */
-@media screen and (max-device-width: 640px) {
-    .container {
-        width: 400px;
-        height: 200px;
-    }
-}
+
 /* For iPhone 4 Portrait or Landscape View */
 @media screen and (min-device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {
-    .container {
-        width: 400px;
-        height: 400px;
-    }
+    body {
+            background: url(bg-intro-mobile.png), hsl(0, 100%, 74%);
+        }
+    
+        main {
+            flex-direction: column;
+        }
+    
+        .second {
+            margin: 5px 10px 50px 10px;
+        }
+    
+        .form {
+            padding: 20px;
+        }
+    
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        select {
+            padding: 20px;
+        }
+    
+        h1 {
+            font-size: 30px;
+        }
 }
 /* For iPhone 5 Portrait or Landscape View */
 @media (device-height: 568px) and (device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {
-    .container {
-        width: 400px;
-        height: 400px;
-    }
+    body {
+            background: url(bg-intro-mobile.png), hsl(0, 100%, 74%);
+        }
+    
+        main {
+            flex-direction: column;
+        }
+    
+        .second {
+            margin: 5px 10px 50px 10px;
+        }
+    
+        .form {
+            padding: 20px;
+        }
+    
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        select {
+            padding: 20px;
+        }
+    
+        h1 {
+            font-size: 30px;
+        }
 }
 
 /* For iPhone 6 and 6 plus Portrait or Landscape View */
 @media (min-device-height: 667px) and (min-device-width: 375px) and (-webkit-min-device-pixel-ratio: 3) {
-    .container{
-        width: 400px;
-        height: 400px;
-    }
+    body {
+            background: url(bg-intro-mobile.png), hsl(0, 100%, 74%);
+        }
+    
+        main {
+            flex-direction: column;
+        }
+    
+        .second{
+            margin: 5px 10px 50px 10px;
+        }
+    
+        .form {
+            padding: 20px;
+        }
+    
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        select {
+            padding: 20px;
+        }
+    
+        h1 {
+            font-size: 30px;
+        }
+}
+@media all and (max-width:900px){
+    body {
+            background: url(bg-intro-mobile.png), hsl(0, 100%, 74%);
+        }
+    
+        main {
+            flex-direction: column;
+        }
+    
+        .second {
+            margin: 5px 10px 50px 10px;
+        }
+    
+        .form {
+            padding: 20px;
+        }
+    
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        select {
+            padding: 20px;
+        }
+    
+        h1 {
+            font-size: 30px;
+        }
+
 }
